--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         <activity android:name=".FoersteLederActivity" />
         <activity android:name=".LederOpretMoedeActivity" />
         <activity android:name=".deltagerDagsordenActivity" />
-        <activity android:name=".LederStartMoedeActivity"></activity>
+        <activity android:name=".LederStartMoedeActivity" />
+        <activity android:name=".Highscore"></activity>
     </application>
 
 </manifest>
