--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.casper.feedbackapp">
 
+
+
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -27,10 +30,12 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".MoedeDeltagActivity" />
         <activity android:name=".FoersteLederActivity" />
-        <activity android:name=".LederOpretMoedeActivity" />
+        <activity android:name=".LederOpretMoedeActivity"
+            android:windowSoftInputMode="adjustPan|adjustResize"/>
         <activity android:name=".deltagerDagsordenActivity" />
         <activity android:name=".LederStartMoedeActivity" />
         <activity android:name=".Highscore"></activity>
+
     </application>
 
 </manifest>
