--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".MoedeDeltagActivity" />
         <activity android:name=".FoersteLederActivity" />
-        <activity android:name=".LederOpretMoedeActivity" />
+        <activity android:name=".LederOpretMoedeActivity"
+            android:windowSoftInputMode="adjustPan|adjustResize"/>
         <activity android:name=".deltagerDagsordenActivity" />
         <activity android:name=".LederStartMoedeActivity" />
         <activity android:name=".Highscore" />
