--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         <activity android:name=".Fragment.Tab4" />
         <activity android:name=".Fragment.Tab5" />
         <activity android:name=".Fragment.Tab6" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".Fragment.MainActivity" />
         <activity android:name=".Mødedeltager.MoedeDeltagActivity" />
         <activity android:name=".Mødeleder.FoersteLederActivity" />
         <activity
