--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity android:name=".Mødeleder.LederStartMoedeActivity" />
         <activity android:name=".Mødeleder.Highscore" />
         <activity android:name=".Mødeleder.MoedeOprettet" />
+        <activity android:name=".Mødeleder.LogIn"/>
         <activity android:name=".SlutActivity"></activity>
     </application>
 
