--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,19 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 
 android {
     compileSdkVersion 28
@@ -31,6 +46,7 @@ dependencies {
 
     //ADD LIBRARY @Henrik
     compile 'com.github.GoodieBag:Pinview:v1.3'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.8'
 }
 
 apply plugin: 'com.google.gms.google-services'
