--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,21 @@
 apply plugin: 'com.android.application'
 
 android {
+
+
+    packagingOptions {
+
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/proguard/androidx-annotations.pro'
+    }
+
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.casper.feedbackapp"
@@ -30,7 +45,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     //ADD LIBRARY @Henrik
-    compile 'com.github.GoodieBag:Pinview:v1.3'
+    implementation 'com.github.GoodieBag:Pinview:v1.3'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
 }
 
 apply plugin: 'com.google.gms.google-services'
