--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,21 +1,21 @@
-apply plugin: 'com.android.application'
-
-android {
-
-
-    packagingOptions {
-
-        exclude 'META-INF/DEPENDENCIES'
-        exclude 'META-INF/LICENSE'
-        exclude 'META-INF/LICENSE.txt'
-        exclude 'META-INF/license.txt'
-        exclude 'META-INF/NOTICE'
-        exclude 'META-INF/NOTICE.txt'
-        exclude 'META-INF/notice.txt'
-        exclude 'META-INF/ASL2.0'
-        exclude 'META-INF/proguard/androidx-annotations.pro'
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
     }
 
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
+apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
+
+android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.casper.feedbackapp"
@@ -46,6 +46,7 @@ dependencies {
 
     //ADD LIBRARY @Henrik
     implementation 'com.github.GoodieBag:Pinview:v1.3'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.8'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
 }
 
