--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,11 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     //ADD LIBRARY @Henrik
-    compile 'com.github.GoodieBag:Pinview:v1.3'
+    implementation 'com.github.GoodieBag:Pinview:v1.3'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.8'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
+
+
     implementation files('libs/activation.jar')
     implementation files('libs/additionnal.jar')
     implementation files('libs/mail.jar')
