Ændringer lavet til Firebase

--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
+        // har ændret den her version fra 3.3.0 til
+        classpath 'com.android.tools.build:gradle:3.2.1'
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -15,6 +16,7 @@ buildscript {
         classpath 'com.google.gms:google-services:3.1.1'
     }
 }
+
 
 allprojects {
     repositories {
