--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.8'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
 
+    //ADD LIBRARY Monica
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
 
     implementation files('libs/activation.jar')
     implementation files('libs/additionnal.jar')
