--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Mødeleder.StatistikCharts"></activity>
+        <activity android:name=".DagsordenLogik.Dagsorden"></activity>
+        <activity android:name=".Mødeleder.StatistikCharts" />
         <activity android:name=".Fragment.Tab1" />
         <activity
             android:name=".StartActivity"
