--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation files('libs/additionnal.jar')
     implementation files('libs/mail.jar')
     implementation 'com.crashlytics.sdk.android:crashlytics-ndk:2.0.5'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
 }
 
