--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
             android:name=".Mødeleder.LederOpretMoedeActivity"
             android:windowSoftInputMode="adjustPan|adjustResize" />
         <activity android:name=".Mødedeltager.deltagerDagsordenActivity" />
-        <activity android:name=".Mødeleder.LederStartMoedeActivity" />
+        <activity android:name=".Mødeleder.LederStartMoedeActivity"
+            />
         <activity android:name=".Mødeleder.Highscore" />
         <activity android:name=".Mødeleder.MoedeOprettet" />
         <activity android:name=".Mødeleder.LogIn" />
