--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DagsordenLogik.Dagsorden"></activity>
+        <activity android:name=".Fragment.Tab8"></activity>
+        <activity android:name=".DagsordenLogik.Dagsorden" />
         <activity android:name=".Mødeleder.StatistikCharts" />
         <activity android:name=".Fragment.Tab1" />
         <activity
@@ -35,8 +36,7 @@
             android:name=".Mødeleder.LederOpretMoedeActivity"
             android:windowSoftInputMode="adjustPan|adjustResize" />
         <activity android:name=".Mødedeltager.deltagerDagsordenActivity" />
-        <activity android:name=".Mødeleder.LederStartMoedeActivity"
-            />
+        <activity android:name=".Mødeleder.LederStartMoedeActivity" />
         <activity android:name=".Mødeleder.Highscore" />
         <activity android:name=".Mødeleder.MoedeOprettet" />
         <activity android:name=".Mødeleder.LogIn" />
