--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Mødeleder.Kommentar"></activity>
+        <activity android:name=".Tab8Feedback"></activity>
+        <activity android:name=".Tab7Feedback" />
+        <activity android:name=".Tab6Feedback" />
+        <activity android:name=".Tab5Feedback" />
+        <activity android:name=".Tab4Feedback" />
+        <activity android:name=".Tab3Feedback" />
+        <activity android:name=".Tab2Feedback" />
+        <activity android:name=".Tab1Feedback" />
+        <activity
+            android:name=".Main2Activity"
+            android:label="@string/title_activity_main2"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Mødeleder.Kommentar" />
         <activity android:name=".Fragment.Tab8" />
         <activity android:name=".DagsordenLogik.Dagsorden" />
         <activity android:name=".Mødeleder.StatistikCharts" />
