--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,26 +11,56 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Tab8Feedback"></activity>
-        <activity android:name=".Tab7Feedback" />
-        <activity android:name=".Tab6Feedback" />
-        <activity android:name=".Tab5Feedback" />
-        <activity android:name=".Tab4Feedback" />
-        <activity android:name=".Tab3Feedback" />
-        <activity android:name=".Tab2Feedback" />
-        <activity android:name=".Tab1Feedback" />
+        <activity android:name=".FeedbackTab.Tab8Feedback"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".FeedbackTab.Tab7Feedback"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".FeedbackTab.Tab6Feedback"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".FeedbackTab.Tab5Feedback"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".FeedbackTab.Tab4Feedback"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".FeedbackTab.Tab3Feedback"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".FeedbackTab.Tab2Feedback"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".FeedbackTab.Tab1Feedback"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
         <activity
-            android:name=".Main2Activity"
+            android:name=".FeedbackTab.Main2Activity"
             android:label="@string/title_activity_main2"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Mødeleder.Kommentar" />
-        <activity android:name=".Fragment.Tab8" />
-        <activity android:name=".DagsordenLogik.Dagsorden" />
-        <activity android:name=".Mødeleder.StatistikCharts" />
-        <activity android:name=".Fragment.Tab1" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Mødeleder.Kommentar"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Fragment.Tab8"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".DagsordenLogik.Dagsorden"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Mødeleder.StatistikCharts"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Fragment.Tab1"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".StartActivity"
-            android:label="feedbackapp">
+            android:label="feedbackapp"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -42,7 +72,9 @@
         <activity android:name=".Fragment.Tab4" />
         <activity android:name=".Fragment.Tab5" />
         <activity android:name=".Fragment.Tab6" />
-        <activity android:name=".Fragment.MainActivity" />
+        <activity android:name=".Fragment.MainActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
         <activity android:name=".Mødedeltager.MoedeDeltagActivity" />
         <activity android:name=".Mødeleder.FoersteLederActivity" />
         <activity android:name=".Mødedeltager.deltagerDagsordenActivity" />
