--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,7 @@
             android:screenOrientation="portrait"/>
         <activity
             android:name=".StartActivity"
-            android:label="feedbackapp"
+            android:label="@string/app_name"
             android:configChanges="orientation"
             android:screenOrientation="portrait">
             <intent-filter>
